Update security for front deployment